RESOLVED FIXED235310
A sandboxed document should not reuse its service worker client ID
https://bugs.webkit.org/show_bug.cgi?id=235310
Summary A sandboxed document should not reuse its service worker client ID
youenn fablet
Reported 2022-01-18 00:33:21 PST
A sandboxed document should not reuse its service worker client ID
Attachments
Patch (6.69 KB, patch)
2022-01-18 00:52 PST, youenn fablet
no flags
youenn fablet
Comment 1 2022-01-18 00:52:14 PST
EWS
Comment 2 2022-01-24 23:01:10 PST
Committed r288542 (246374@main): <https://commits.webkit.org/246374@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 449366 [details].
Radar WebKit Bug Importer
Comment 3 2022-01-24 23:02:18 PST
Note You need to log in before you can comment on or make changes to this bug.