A sandboxed document should not reuse its service worker client ID https://bugs.webkit.org/show_bug.cgi?id=235310

Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

* web-platform-tests/service-workers/service-worker/clients-get-resultingClientId.https-expected.txt:

Source/WebCore:

Create a new identifier when the current identifier, already exposed to service workers, cannot be reused.
Covered by updated test.

* dom/Document.cpp:
* dom/Document.h:
* dom/ScriptExecutionContext.cpp:
* dom/ScriptExecutionContext.h:
* loader/DocumentLoader.cpp:



Canonical link: https://commits.webkit.org/246374@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288542 268f45cc-cd09-0410-ab3c-d52691b4dbfc