Source/WebCore/dom/ScriptExecutionContext.cpp
@@ -119,6 +119,19 @@ ScriptExecutionContext::ScriptExecutionContext(ScriptExecutionContextIdentifier 
     allScriptExecutionContextsMap().add(m_identifier, this);
 }
 
+void ScriptExecutionContext::regenerateIdentifier()
+{
+    Locker locker { allScriptExecutionContextsMapLock };
+
+    ASSERT(allScriptExecutionContextsMap().contains(m_identifier));
+    allScriptExecutionContextsMap().remove(m_identifier);
+
+    m_identifier = ScriptExecutionContextIdentifier::generate();
+
+    ASSERT(!allScriptExecutionContextsMap().contains(m_identifier));
+    allScriptExecutionContextsMap().add(m_identifier, this);
+}
+
 void ScriptExecutionContext::removeFromContextsMap()
 {
     Locker locker { allScriptExecutionContextsMapLock };
